# zepra

./: CMakeLists.txt  claude.md  gemini.md
.github/: FUNDING.yml
source/nxrender-cpp/: CMakeLists.txt
source/nxrender-cpp/core/: memory_pool.h  render_tile.cpp
source/nxrender-cpp/input/: clipboard.cpp  event_router.h  gesture_recognizer.h
source/nxrender-cpp/layout/: layout.h
source/nxrender-cpp/nxgfx/: batch_renderer.cpp  clip_stack.cpp  context.cpp  context3d.cpp  context3d.h  filter_pipeline.cpp  gl_includes.h  render_target.cpp  shader.cpp  svg.h  text.cpp  texture_atlas.cpp  ui_draw.cpp  ui_draw.h
source/nxrender-cpp/nxpdf/: nx_pdf.cpp
source/nxrender-cpp/platform/: display_info.cpp  windows_wgl.cpp
source/nxrender-cpp/web/: accessibility.h  advanced.cpp  advanced.h  animation.cpp  animation.h  compositor.cpp  compositor.h  document_view.h  dom_renderer.cpp  events.cpp  events.h  forms.cpp  forms.h  frame_orchestrator.cpp  input.cpp  input.h  service_and_selection.cpp  service_and_selection.h  table_and_media.cpp
source/nxrender-cpp/widgets/: checkbox.cpp  dialog.h  docking_manager.cpp  menu.h  tabview.cpp  tree_view.h  widget.cpp
source/platform/: CMakeLists.txt  clipboard.cpp
source/platform/linux/: window_system_linux.cpp
source/platform/src/: event_loop.cpp
source/webCore/: CMakeLists.txt
source/webCore/browser/: clipboard.h  layout_engine.cpp  layout_engine.h  lazy_image_loader.cpp  mouse_handler.cpp  navigation_controller.h  navigation_history.hpp  nxrender_layout_bridge.cpp  page_loader.hpp  sandboxed_frame.hpp  web_audio_api.hpp
source/webCore/core/: task_manager_cpp.hpp
source/webCore/css/: css_computed_style.hpp  css_engine.cpp  css_style_sheet.cpp  style_resolver.cpp
source/webCore/dom/: dom.cpp  dom_node.cpp  event_target.cpp
source/webCore/graphics/: webgl_context.hpp
source/webCore/html/: html_media_extras.cpp  html_media_source.hpp  html_structural_elements.cpp  html_tree_constructor.cpp
source/webCore/rendering/: page_renderer.hpp
source/webCore/scripting/: js_dom_bridge.cpp
source/zepraScript/: CMakeLists.txt  architecture.md  zepra_alloc.h  zepra_api.hpp
source/zepraScript/api/: BlobAPI.h  CryptoAPI.cpp  CryptoAPI.h  EncodingAPI.h  FetchAPI.h  FormDataAPI.h  PerformanceAPI.cpp  PerformanceAPI.h  StorageAPI.h  StreamsAPI.h  StructuredCloneAPI.h  TimerAPI.cpp  TimerAPI.h  WorkerAPI.h  script.cpp  script_engine.cpp
source/zepraScript/browser/: DOMBindings.h  DevToolsAPI.h  WebRTCAPI.h  WebSocketAPI.h  document.cpp  fetch.cpp  secure_storage.cpp  service_worker.cpp  video_bindings.cpp  window.cpp  worker.cpp
source/zepraScript/builtins/: atomics.cpp  date.cpp  json.cpp  math.cpp  reflect.cpp  weakref.cpp
source/zepraScript/bytecode/: bytecode_generator.cpp  bytecode_generator.hpp
source/zepraScript/ci/: ConformanceGate.h
source/zepraScript/core/: EmbedderAPI.cpp  TaskRunner.h
source/zepraScript/debugger/: EnhancedDebugger.h  InspectorProtocol.h  StepDebugger.h  breakpoint_manager.cpp  call_stack_info.cpp  console.hpp  debug_api.cpp  debugger.cpp  devtools_protocol.hpp  execution_control.cpp  profiler.hpp
source/zepraScript/frontend/: ASTVisitor.h  ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
source/zepraScript/heap/: EphemeronTable.h  GCOrchestrator.h  GCScheduler.h  GCTracer.h  GCVerifier.h  HeapSnapshot.h  LargeObjectSpace.h  Nursery.h  ObjectTracing.h  OldGeneration.h  RegionAllocator.h  RememberedSet.h  Scavenger.h  SizeClassAllocator.h  StackScanner.h  VirtualMemory.h  WeakProcessor.h  WriteBarrier.h  code_space_manager.cpp  finalizer.cpp  gc_activity_callback.cpp  gc_allocator.cpp  gc_arena.cpp  gc_atom_marking.cpp  gc_atom_table.cpp  gc_background_throttle_policy.cpp  gc_barrier_batch.cpp  gc_barrier_set.cpp  gc_barrier_verifier.cpp  gc_benchmark.cpp  gc_cell.cpp  gc_compact_coordinator.cpp  gc_complete_subspace.cpp  gc_concurrent_mark_controller.cpp  gc_concurrent_sweep_controller.cpp  gc_conservative_scanner.cpp  gc_controller.cpp  gc_debug.cpp  gc_finalization_executor.cpp  gc_finalizer_queue.cpp  (+54 more)
source/zepraScript/host/: native_function.cpp  native_function.hpp  script_engine.cpp
source/zepraScript/interpreter/: interpreter.cpp  interpreter_debug.cpp  interpreter_dispatch.cpp
source/zepraScript/jit/: Deoptimization.h  Fuses.h  InlineCache.h  ZepraTierBuilder.h  jit_code_cache.cpp  jit_tier_bridge.cpp  jit_tier_bridge.hpp  macro_assembler.cpp
source/zepraScript/memory/: arena_allocator.cpp  page_allocator.cpp
source/zepraScript/modules/: DynamicImport.cpp  DynamicImport.h  ModuleExecutor.h  ModuleLoader.h
source/zepraScript/nxvideo/: nxvideo_cpp.hpp
source/zepraScript/perf/: AllocationProfiler.h  HeapProfiler.h  SamplingProfiler.h
source/zepraScript/profiler/: heap_profiler.cpp
source/zepraScript/regex/: regex_compiler.h
source/zepraScript/release/: ReleaseManifest.h
source/zepraScript/runtime/: gc_lifecycle_hooks.cpp  gc_object_visitor.cpp  gc_pressure_api.cpp  gc_smart_ram_bridge.cpp  gc_stats_api.cpp  gc_tab_lifecycle.cpp  gc_vm_allocator.cpp  gc_vm_hooks.cpp
source/zepraScript/safety/: CrashBoundary.h  EngineRecovery.h  JITFallback.h  OOMHandler.h  SecurityHardening.h  StackGuard.h  UncatchableException.h  WasmTrapHandler.h  WorkerIsolation.h
source/zepraScript/security/: SecurityAudit.h
source/zepraScript/threading/: concurrent_queue.h  thread_pool.cpp
source/zepraScript/tools/: CMakeLists.txt  zepra-repl.cpp
source/zepraScript/wasm/: WasmARM64Assembler.h  WasmBaselineBulkGC.cpp  WasmBaselineCompile.cpp  WasmBaselineInternal.h  WasmBaselineOpcodes.cpp  WasmCodeBuffer.cpp  WasmCodeCache.h  WasmComponent.h  WasmDebug.h  WasmException.h  WasmGC.h  WasmHostBindings.h  WasmInstance.h  WasmInterfaceTypes.h  WasmInterpreter.cpp  WasmIonCompiler.h  WasmModule.h  WasmModuleLink.h  WasmSignalHandlers.cpp  WasmStackManager.cpp  WasmStackManager.h  WasmStreaming.h  WasmStringBuiltins.h  WasmTable.h  WasmTypeDef.h  WasmX86Assembler.h  ZWasmFaultHandler.cpp  wasm.cpp  wasm.hpp
test/: CMakeLists.txt
test/zeprascript/: CMakeLists.txt  ZepraScriptTestRunner.cpp
(+150 files in other folders)
